Fix navbar collapse hiding elements

--- a/src/assets/sass/_navigation.sass
+++ b/src/assets/sass/_navigation.sass
@@ -4,17 +4,25 @@
     flex-grow: 1
     box-shadow: $box-shadow
 
-    .navbar-start
-        flex: 1 !important
-
-    .navbar-center
+    div
         display: flex
-        flex: 1 !important
-        justify-content: center
+        flex-grow: 1
+        flex-shrink: 0
         align-items: center
 
+    .navbar-start
+        flex: 1
+        justify-content: flex-start
+        margin-right: auto
+
+    .navbar-center
+        flex: 1
+        justify-content: center
+
     .navbar-end
-        flex: 1 !important
+        flex: 1
+        justify-content: flex-end
+        margin-left: auto
     
     .navbar-logo
         height: 30px
